# rust-web-api

./: .gitignore  Cargo.toml  LICENSE  README.md
asp.net/NotesApi/: Startup.cs
asp.net/NotesApi/Properties/: launchSettings.json
dotnet/NotesApi/: NotesApi.sln  Startup.cs  dotnet.sln
dotnet/NotesApi/Benchmark/: Benchmark.csproj  Program.cs
dotnet/NotesApi/NotesApi/: NotesApi.csproj  Program.cs  Startup.cs
dotnet/NotesApi/NotesApi/Controllers/: NotesController.cs
dotnet/NotesApi/Properties/: launchSettings.json
scripts/: bb8.ps1  benchmark.ps1  postgres-stack.yml  r2d2.ps1  remove-postgres.ps1  run-asp.ps1  run-bb8.ps1  run-benchmark.ps1  run-rust.ps1  run.ps1  start-postgres.ps1  test.http
src/: main.rs
