[package]
authors = ["s. galiamov <sgalyamov@gmail.com>"]
edition = "2018"
name = "rust-web-api"
version = "0.1.0"

[dependencies]
actix-web = "3.3"
chrono = {version = "0.4", features = ["serde"]}
r2d2 = "0.8"
r2d2_postgres = "0.17"
serde = "1.0"

[dependencies.postgres]
features = [
  "with-chrono-0_4",
]
version = "*"
